--- a/chinslickingweb/home/templates/header.html
+++ b/chinslickingweb/home/templates/header.html
@@ -48,18 +48,18 @@
                                 {% for item in nav_list %}
                                     {% if item.children.all %}
                                         <li class="has-child">
-                                            <a href="{{ item.url }}?banner={{ item.code }}">{{ item.en_name }}</a>
+                                            <a href="{{ item.url }}/banner/{{ item.code }}">{{ item.en_name }}</a>
                                             <ul class="sub-menu">
                                                 {% for child in item.children.all %}
                                                     <li>
-                                                        <a href="{{ child.url }}?banner={{ item.code }}">{{ child.en_name }}</a>
+                                                        <a href="{{ child.url }}/banner/{{ item.code }}">{{ child.en_name }}</a>
                                                     </li>
                                                 {% endfor %}
                                             </ul>
                                         </li>
                                     {% else %}
                                         {% if item.is_root %}
-                                            <li><a href="{{ item.url }}?banner={{ item.code }}">{{ item.en_name }}</a></li>
+                                            <li><a href="{{ item.url }}/banner/{{ item.code }}">{{ item.en_name }}</a></li>
                                         {% endif %}
                                     {% endif %}
                                 {% endfor %}
@@ -67,11 +67,11 @@
                                 {% for item in nav_list %}
                                     {% if item.children.all %}
                                         <li class="has-child">
-                                            <a href="{{ item.url }}?banner={{ item.code }}">{{ item.name }}</a>
+                                            <a href="{{ item.url }}/banner/{{ item.code }}">{{ item.name }}</a>
                                             <ul class="sub-menu">
                                                 {% for child in item.children.all %}
                                                     <li>
-                                                        <a href="{{ child.url }}?banner={{ item.code }}">{{ child.name }}</a>
+                                                        <a href="{{ child.url }}/banner/{{ item.code }}">{{ child.name }}</a>
                                                     </li>
                                                 {% endfor %}
                                             </ul>
@@ -79,7 +79,7 @@
                                     {% else %}
                                         {% if item.is_root %}
                                             <li>
-                                                <a href="{{ item.url }}?banner={{ item.code }}">{{ item.name }}</a>
+                                                <a href="{{ item.url }}/banner/{{ item.code }}">{{ item.name }}</a>
                                             </li>
                                         {% endif %}
                                     {% endif %}
