--- a/chinslickingweb/home/templates/footer.html
+++ b/chinslickingweb/home/templates/footer.html
@@ -81,9 +81,9 @@
                 <div class="col-lg-12 text-center">
                     <div class="copyright-txt">
                         {% if LANGUAGE_CODE == 'en' %}
-                            <a href="http://www.beian.miit.gov.cn" target="_blank">{{ sysconfig.en_icp }}</a> | {{ sysconfig.en_site_company }}
+                            <a href="http://www.beian.miit.gov.cn" target="_blank">{{ sysconfig.en_icp }}</a>  {{ sysconfig.en_site_company }}
                         {% else %}
-                            <a href="http://www.beian.miit.gov.cn" target="_blank">{{ sysconfig.icp }}</a> | {{ sysconfig.site_company }}
+                            <a href="http://www.beian.miit.gov.cn" target="_blank">{{ sysconfig.icp }}</a>  {{ sysconfig.site_company }}
                         {% endif %}
                     </div>
                 </div>
