--- a/chinslickingweb/home/templates/banner.html
+++ b/chinslickingweb/home/templates/banner.html
@@ -10,7 +10,11 @@
                     <div class="row">
                         <div class="col-sm-12 col-sm-12 col-md-12 col-lg-12 text-center">
                             <div class="slide-content">
-                                <h2>{% trans item.text %}</h2>
+                                <h2>
+                                    {% if item.text %}
+                                        {{ item.text }}
+                                    {% endif %}
+                                </h2>
                             </div>
                         </div>
                     </div>
