--- a/chinslickingweb/home/templates/header-index.html
+++ b/chinslickingweb/home/templates/header-index.html
@@ -1770,18 +1770,18 @@
                                 {% for item in nav_list %}
                                     {% if item.children.all %}
                                         <li class="has-child">
-                                            <a href="{{ item.url }}/banner/{{ item.code }}">{{ item.en_name }}</a>
+                                            <a href="{{ item.url }}?banner={{ item.code }}">{{ item.en_name }}</a>
                                             <ul class="sub-menu">
                                                 {% for child in item.children.all %}
                                                     <li>
-                                                        <a href="{{ child.url }}/banner/{{ item.code }}">{{ child.en_name }}</a>
+                                                        <a href="{{ child.url }}?banner={{ item.code }}">{{ child.en_name }}</a>
                                                     </li>
                                                 {% endfor %}
                                             </ul>
                                         </li>
                                     {% else %}
                                         {% if item.is_root %}
-                                            <li><a href="{{ item.url }}/banner/{{ item.code }}">{{ item.en_name }}</a>
+                                            <li><a href="{{ item.url }}?banner={{ item.code }}">{{ item.en_name }}</a>
                                             </li>
                                         {% endif %}
                                     {% endif %}
@@ -1790,18 +1790,18 @@
                                 {% for item in nav_list %}
                                     {% if item.children.all %}
                                         <li class="has-child">
-                                            <a href="{{ item.url }}/banner/{{ item.code }}">{{ item.name }}</a>
+                                            <a href="{{ item.url }}?banner={{ item.code }}">{{ item.name }}</a>
                                             <ul class="sub-menu">
                                                 {% for child in item.children.all %}
                                                     <li>
-                                                        <a href="{{ child.url }}/banner/{{ item.code }}">{{ child.name }}</a>
+                                                        <a href="{{ child.url }}?banner={{ item.code }}">{{ child.name }}</a>
                                                     </li>
                                                 {% endfor %}
                                             </ul>
                                         </li>
                                     {% else %}
                                         {% if item.is_root %}
-                                            <li><a href="{{ item.url }}/banner/{{ item.code }}">{{ item.name }}</a></li>
+                                            <li><a href="{{ item.url }}?banner={{ item.code }}">{{ item.name }}</a></li>
                                         {% endif %}
                                     {% endif %}
                                 {% endfor %}
