--- a/chinslickingweb/home/templates/about.html
+++ b/chinslickingweb/home/templates/about.html
@@ -44,7 +44,7 @@
                                 <h2><b>2015{% trans "年" %}</b></h2>
                             </div>
                             <div class="content">
-                                <p>{% trans "公司正式成立" %}</p>
+                                <p>{% trans "秦食皇品牌诞生" %}</p>
                             </div>
                         </div>
                     </div>
@@ -62,7 +62,7 @@
                     <div class="col-sm-12 col-sm-12 col-md-6 col-lg-4 single-service-2">
                         <div class="text-center">
                             <div class="title">
-                                <h2><b>3{% trans "个" %}</b></h2>
+                                <h2><b>7{% trans "个" %}</b></h2>
                             </div>
                             <div class="content">
                                 <p>{% trans "系列产品" %}</p>
@@ -94,7 +94,7 @@
                         {% endif %}
                     </div>
                 </div>
-                <div class="col-lg-7 col-md-6 single-service" style="z-index: 100;">
+                <div class="col-lg-7 col-md-6 single-service" style="z-index: 100; text-align:left;">
                     <div class="inner inner-hover" style="padding: 0;">
                         <div>
                             {% if LANGUAGE_CODE == 'en' %}
