--- a/chinslickingweb/home/templates/contact.html
+++ b/chinslickingweb/home/templates/contact.html
@@ -140,7 +140,7 @@
                         <h4>{% trans "邮箱" %}</h4>
                     </div>
                     <div class="content">
-                        <h3 style="color: #fff;">Johndarphy@xachf.com</h3>
+                        <h3 style="color: #fff;">clarissa@xachf.com</h3>
                     </div>
                 </div>
             </div>
@@ -213,7 +213,7 @@
             }
 
             var map = new AMap.Map('map-container', {
-                zoom: 17,
+                zoom: 4,
                 zooms: [4, 25], //设置地图级别范围
                 // center: [116.397428, 39.90923]
                 center: [108.88516,34.184359],
