--- a/chinslickingweb/home/templates/header.html
+++ b/chinslickingweb/home/templates/header.html
@@ -12,6 +12,11 @@
     <meta name="keywords" content="{{ SITE_DESC }}">
     <meta name="author" content="{{ SITE_AUTHOR }}">
     <meta name="descriptions" content="{{ SITE_DESC }}">
+    {% for item in keyword_list %}
+        <meta name="keywords" content="{{ item.keyword }}">
+        <meta name="title" content="{{ item.title }}">
+        <meta name="descriptions" content="{{ item.descr }}">
+    {% endfor %}
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/owl.carousel.css' %}">
