--- a/chinslickingweb/home/templates/index.html
+++ b/chinslickingweb/home/templates/index.html
@@ -57,7 +57,7 @@
     </div>
 
     <div class="portfolio-area bg2">
-        <div class="container-fluid pdlr-150">
+        <div class="container-fluid pdlr-150" style="min-height: 400px;">
             <!--<div class="section-title">
                 <h2>美食美味</h2>
                 <p style="color:#000;">享美食更享艺术，美食即艺术。</p>
