--- a/chinslickingweb/home/templates/contact.html
+++ b/chinslickingweb/home/templates/contact.html
@@ -140,7 +140,7 @@
                         <h4>{% trans "邮箱" %}</h4>
                     </div>
                     <div class="content">
-                        <h3 style="color: #fff;">clarissa@xachf.com</h3>
+                        <h3 style="color: #fff;">info@xachf.com</h3>
                     </div>
                 </div>
             </div>
