--- a/chinslickingweb/home/templates/header.html
+++ b/chinslickingweb/home/templates/header.html
@@ -43,7 +43,7 @@
             <div class="row" style="display: flex; vertical-align: middle; justify-items: center; align-items: center;">
                 <div class="col-6 col-sm-3 logo-column">
                     <a href="/index" class="logo">
-                        <img src="{% static 'images/logo_nav.png' %}" alt="logo">
+                        <img src="{% static 'images/logo_nav.png' %}" alt="logo" style="height: 67px;">
                     </a>
                 </div>
                 <div class="col-6 col-sm-8 nav-column clearfix">
@@ -93,6 +93,8 @@
                         </ul>
                     </nav>
                 </div>
+
+
             </div>
         </div>
     </header>
