--- a/chinslickingweb/home/templates/header-index.html
+++ b/chinslickingweb/home/templates/header-index.html
@@ -1760,7 +1760,7 @@
             <div class="row" style="display: flex; vertical-align: middle; justify-items: center; align-items: center;">
                 <div class="col-6 col-sm-3 logo-column">
                     <a href="/index" class="logo">
-                        <img src="{% static 'images/logo_nav.png' %}" alt="logo">
+                        <img src="{% static 'images/logo_nav.png' %}" alt="logo" style="height: 67px;">
                     </a>
                 </div>
                 <div class="col-6 col-sm-8 nav-column clearfix">
