--- a/chinslickingweb/home/templates/footer.html
+++ b/chinslickingweb/home/templates/footer.html
@@ -104,58 +104,68 @@
 
 
 <div class="fixed-box">
-    <div id="gotoTop">
-        <span class="icon">
-            <i class="glyphicon glyphicon-open"></i>
-        </span>
-    </div>
-    <div style="text-align: center;">
-        <form action="/i18n/setlang/" method="post" id="change_language_form" class="language-form">
-            {% csrf_token %}
-            {% get_current_language as LANGUAGE_CODE %}
-            {% get_available_languages as LANGUAGES %}
-            {% get_current_language_bidi as LANGUAGE_BIDI %}
-            <div style="display: inline-block;">
-                {% for lang in LANGUAGES %}
-                    <label style="cursor: pointer; color: #000; font-weight: normal;margin-bottom: 0px">
-                        <input type="submit" style="width: 0;height: 0;background-color: transparent;border: 0;"
-                               name="language" value="{{ lang.0|lower }}"
-                            {% ifequal lang.0 LANGUAGE_CODE %}  checked {% endifequal %}>
-                        {{ lang.1|lower }}
-                    </label>
-                {% endfor %}
+    <div class="fixed-box-body">
+        <div id="gotoTop">
+            <span class="icon">
+                <i class="glyphicon glyphicon-open"></i>
+            </span>
+        </div>
+        <div style="text-align: center;">
+            <form action="/i18n/setlang/" method="post" id="change_language_form" class="language-form">
+                {% csrf_token %}
+                {% get_current_language as LANGUAGE_CODE %}
+                {% get_available_languages as LANGUAGES %}
+                {% get_current_language_bidi as LANGUAGE_BIDI %}
+                <div style="display: inline-block;">
+                    {% for lang in LANGUAGES %}
+                        <label style="cursor: pointer; color: #000; font-weight: normal;margin-bottom: 0px">
+                            <input type="submit" style="width: 0;height: 0;background-color: transparent;border: 0;"
+                                   name="language" value="{{ lang.0|lower }}"
+                                {% ifequal lang.0 LANGUAGE_CODE %}  checked {% endifequal %}>
+                            {{ lang.1|upper }}
+                        </label>
+                    {% endfor %}
+                </div>
+            </form>
+        </div>
+        <!--<div>
+            <div id="i18nZh" class="fixed-box-content">中文</div>
+        </div>
+        <div>
+            <div id="i18nEn" class="fixed-box-content">英文</div>
+        </div>
+        <div>
+            <div class="fixed-box-content">
+                <a href="https://shop108037822.taobao.com/" target="_blank">在线<br>商城</a>
             </div>
-        </form>
-    </div>
-    <!--<div>
-        <div id="i18nZh" class="fixed-box-content">中文</div>
-    </div>
-    <div>
-        <div id="i18nEn" class="fixed-box-content">英文</div>
-    </div>
-    <div>
-        <div class="fixed-box-content">
-            <a href="https://shop108037822.taobao.com/" target="_blank">在线<br>商城</a>
+        </div>-->
+        <div>
+            <div class="fixed-box-content">
+    {#            <a href="https://wpa.qq.com/msgrd?v=3&uin=226925509&Site=www.sungoto.com&Menu=yes" target="_blank">{% trans "在线<br>客服" %}</a>#}
+                <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=226925509&site=qq&menu=yes">
+                    <img border="0" src="http://wpa.qq.com/pa?p=2:226925509:52" alt='{% trans "在线<br>客服" %}' title='{% trans "在线<br>客服" %}'/>
+                </a>
+            </div>
         </div>
-    </div>-->
-    <div>
-        <div class="fixed-box-content">
-            <a href="https://wpa.qq.com/msgrd?v=3&uin=3520989809&Site=www.sungoto.com&Menu=yes" target="_blank">{% trans "在线<br>客服" %}</a>
+        <div class="fixed-box-left-show">
+            <span class="icon">
+                <i class="glyphicon glyphicon-earphone"></i>
+            </span>
+            <div class="fixed-box-content-title">029-8918 9518</div>
+        </div>
+        <div class="fixed-box-left-show">
+            <span class="icon">
+                <i class="glyphicon glyphicon-qrcode"></i>
+            </span>
+            <div class="fixed-box-content-title fixed-box-content-qrcode">
+                <img src="{% static 'images/qrcode.jpg' %}"><br>
+            </div>
         </div>
     </div>
-    <div class="fixed-box-left-show">
+    <div class="fixed-box-bottom">
         <span class="icon">
-            <i class="glyphicon glyphicon-earphone"></i>
+            <i class="glyphicon glyphicon-align-justify"></i>
         </span>
-        <div class="fixed-box-content-title">029-8918 9518</div>
-    </div>
-    <div class="fixed-box-left-show">
-        <span class="icon">
-            <i class="glyphicon glyphicon-qrcode"></i>
-        </span>
-        <div class="fixed-box-content-title fixed-box-content-qrcode">
-            <img src="{% static 'images/qrcode.jpg' %}"><br>
-        </div>
     </div>
 </div>
 
@@ -196,14 +206,17 @@
             //$(this).addClass('current-menu-item');
         //});
 
+        $('.fixed-box-bottom').click(function () {
+           $('.fixed-box-body').slideToggle();
+        });
 
-        $('#language').selectpicker();
+        {#$('#language').selectpicker();#}
         //切换语言
-        $('.change_language').on('change', function(e){
+        {% comment %}$('.change_language').on('change', function(e){
             e.preventDefault();
             $('#change_language_form').submit();
             return false;
-        });
+        });{% endcomment %}
 
         //移除所有li上的class=current-menu-item的样式
         //$('#menu').find('ul').find('li').each(function(){
