--- a/chinslickingweb/home/templates/header-index.html
+++ b/chinslickingweb/home/templates/header-index.html
@@ -1769,7 +1769,7 @@
                             {% if LANGUAGE_CODE == 'en' %}
                                 {% for item in nav_list %}
                                     {% if item.children.all %}
-                                        <li class="has-child">
+                                        <li class="has-child" data-flag="{{item.code}}">
                                             {% if item.url %}
                                                 <a href="{{ item.url }}?banner={{ item.code }}">{{ item.en_name }}</a>
                                             {% else %}
@@ -1777,7 +1777,7 @@
                                             {% endif %}
                                             <ul class="sub-menu">
                                                 {% for child in item.children.all %}
-                                                    <li>
+                                                    <li data-flag="{{child.code}}">
                                                         <a href="{{ child.url }}/{{ child.id }}?banner={{ item.code }}">{{ child.en_name }}</a>
                                                     </li>
                                                 {% endfor %}
@@ -1785,7 +1785,7 @@
                                         </li>
                                     {% else %}
                                         {% if item.is_root %}
-                                            <li>
+                                            <li data-flag="{{item.code}}">
                                                 {% if item.url %}
                                                     <a href="{{ item.url }}?banner={{ item.code }}">
                                                         {{ item.en_name }}
@@ -1800,7 +1800,7 @@
                             {% else %}
                                 {% for item in nav_list %}
                                     {% if item.children.all %}
-                                        <li class="has-child">
+                                        <li class="has-child" data-flag="{{item.code}}">
                                             {% if item.url %}
                                                 <a href="{{ item.url }}?banner={{ item.code }}">{{ item.name }}</a>
                                             {% else %}
@@ -1808,7 +1808,7 @@
                                             {% endif %}
                                             <ul class="sub-menu">
                                                 {% for child in item.children.all %}
-                                                    <li>
+                                                    <li data-flag="{{child.code}}">
                                                         <a href="{{ child.url }}/{{ child.id }}?banner={{ item.code }}">{{ child.name }}</a>
                                                     </li>
                                                 {% endfor %}
@@ -1816,7 +1816,7 @@
                                         </li>
                                     {% else %}
                                         {% if item.is_root %}
-                                            <li>
+                                            <li data-flag="{{item.code}}">
                                                 {% if item.url %}
                                                     <a href="{{ item.url }}?banner={{ item.code }}">
                                                         {{ item.name }}
